--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 
-<header>
+<header class="header">
     <h3>Hospital Management System</h3>
   </header>
-  <div>
+  <article class="article">
       <router-outlet></router-outlet>
-  </div>
-  <footer>
-    copyright @ 2018 Hospital
+  </article>
+  <footer class="header">
+    copyright © 2018 Hospital
   </footer>
 
